fix spacing and add date to card

--- a/src/NewNote.css
+++ b/src/NewNote.css
@@ -11,7 +11,6 @@
     display: flex;
     flex-direction: column;
     margin-right: 20px;
-    margin-top: -40px;
 }
 
 .title {
@@ -25,4 +24,14 @@
 .content {
     width: 300px;
     height: 100px;
+}
+
+.noteHeader {
+    margin-right: 1vw;
+    margin-left: 2vw;
+}
+
+.descriptionHeader {
+    margin-bottom: 1vh;
+    margin-top: 2vh;
 }
